--- a/task1/task1.ipynb
+++ b/task1/task1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,9 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/s2/jdv7kxv13hgf_3qqk7bg5p3r0000gn/T/ipykernel_43507/363554788.py:6: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1711403226120/work/aten/src/ATen/native/TensorShape.cpp:3641.)\n",
+      "  w = w_T.T\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +329,7 @@
     "    lstsq_test_times.append(end_time - start_time)\n",
     "    y_test_values.append(y_test)\n",
     "\n",
-    "    #! TODO: Meansquare\n",
+    "    #! TODO: Meansquare, add epochs\n",
     "    # Reporting a\n",
     "\n",
     "    # Calculate the mean and standard deviation of the difference between the observed training data and the true polynomial curve\n",
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -370,45 +379,45 @@
       "SGD EVALUATION\n",
       "M=2\n",
       "Epoch 0: Loss = 483663.90625\n",
-      "Epoch 10: Loss = 335765.40625\n",
-      "Epoch 20: Loss = 304490.53125\n",
-      "Epoch 30: Loss = 886467.375\n",
-      "Epoch 40: Loss = 9856.11328125\n",
-      "Epoch 50: Loss = 191692.8125\n",
-      "Epoch 60: Loss = 459068.03125\n",
-      "Epoch 70: Loss = 115772.5625\n",
-      "Epoch 80: Loss = 595245.5\n",
-      "Epoch 90: Loss = 1449.019287109375\n",
+      "Epoch 10: Loss = inf\n",
+      "Epoch 20: Loss = nan\n",
+      "Epoch 30: Loss = nan\n",
+      "Epoch 40: Loss = nan\n",
+      "Epoch 50: Loss = nan\n",
+      "Epoch 60: Loss = nan\n",
+      "Epoch 70: Loss = nan\n",
+      "Epoch 80: Loss = nan\n",
+      "Epoch 90: Loss = nan\n",
       "Difference between observed training data and true polynomial curve\n",
-      "Mean difference between SGD-predicted values and true polynomial curve for M=2: -306.2291564941406\n",
-      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=2: 306.3013610839844\n",
+      "Mean difference between SGD-predicted values and true polynomial curve for M=2: nan\n",
+      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=2: nan\n",
       "Difference between the SGD-predicted values and the true polynomial curve for the test set\n",
-      "Mean difference between SGD-predicted values and true polynomial curve for M=2 (test set): -293.73138427734375\n",
-      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=2 (test set): 214.8321990966797\n",
+      "Mean difference between SGD-predicted values and true polynomial curve for M=2 (test set): nan\n",
+      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=2 (test set): nan\n",
       "---------------------------------------------------\n",
       "M=3\n",
       "Epoch 0: Loss = 1070272.0\n",
-      "Epoch 10: Loss = 33348.7421875\n",
-      "Epoch 20: Loss = 9121.9970703125\n",
-      "Epoch 30: Loss = 284.3482360839844\n",
-      "Epoch 40: Loss = 107019.765625\n",
-      "Epoch 50: Loss = 47719.65625\n",
-      "Epoch 60: Loss = 51112.51171875\n",
-      "Epoch 70: Loss = 96362.1015625\n",
-      "Epoch 80: Loss = 29426.05078125\n",
-      "Epoch 90: Loss = 49804.96875\n",
+      "Epoch 10: Loss = nan\n",
+      "Epoch 20: Loss = nan\n",
+      "Epoch 30: Loss = nan\n",
+      "Epoch 40: Loss = nan\n",
+      "Epoch 50: Loss = nan\n",
+      "Epoch 60: Loss = nan\n",
+      "Epoch 70: Loss = nan\n",
+      "Epoch 80: Loss = nan\n",
+      "Epoch 90: Loss = nan\n",
       "Difference between observed training data and true polynomial curve\n",
-      "Mean difference between SGD-predicted values and true polynomial curve for M=3: -266.4220275878906\n",
-      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=3: 457.348876953125\n",
+      "Mean difference between SGD-predicted values and true polynomial curve for M=3: nan\n",
+      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=3: nan\n",
       "Difference between the SGD-predicted values and the true polynomial curve for the test set\n",
-      "Mean difference between SGD-predicted values and true polynomial curve for M=3 (test set): -252.9086456298828\n",
-      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=3 (test set): 336.02935791015625\n",
+      "Mean difference between SGD-predicted values and true polynomial curve for M=3 (test set): nan\n",
+      "Standard deviation of difference between SGD-predicted values and true polynomial curve for M=3 (test set): nan\n",
       "---------------------------------------------------\n",
       "M=4\n",
       "Epoch 0: Loss = 631979520.0\n",
-      "Epoch 10: Loss = 2.5376775093916214e+23\n",
-      "Epoch 20: Loss = inf\n",
-      "Epoch 30: Loss = inf\n",
+      "Epoch 10: Loss = nan\n",
+      "Epoch 20: Loss = nan\n",
+      "Epoch 30: Loss = nan\n",
       "Epoch 40: Loss = nan\n",
       "Epoch 50: Loss = nan\n",
       "Epoch 60: Loss = nan\n",
@@ -433,9 +442,10 @@
     "\n",
     "# Hyperparameters\n",
     "M_values = [2, 3, 4]\n",
-    "learning_rate = 1e-8\n",
+    "learning_rate = 1e-2\n",
     "minibatch_size = 2\n",
     "epochs = 100\n",
+    "# ! TODO add optimiser with Adam, PyTorch loss -> MSE?\n",
     "\n",
     "# Fit the true polynomial function using least squares\n",
     "w = fit_polynomial_ls(x_train, t_train, M_values[0])\n",
