--- a/task2/task2.ipynb
+++ b/task2/task2.ipynb
@@ -207,6 +207,471 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import torchvision.utils as vutils\n",
+    "\n",
+    "# Define the transformation for CIFAR-10 dataset\n",
+    "transform = ToTensor()\n",
+    "\n",
+    "# CIFAR-10 training dataset and DataLoader\n",
+    "trainset = CIFAR10(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "\n",
+    "class MixUp(torch.nn.Module):\n",
+    "    \"\"\"\n",
+    "    Mixup augmentation for training data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    sampling_method (int): Sampling method for mixup. 1: beta distribution, 2: uniform distribution\n",
+    "    num_classes (int): Number of classes in the dataset\n",
+    "    alpha (float): Alpha parameter for beta distribution\n",
+    "    uniform_range (list): Range for uniform distribution\n",
+    "\n",
+    "    Returns:\n",
+    "    augmented_images (torch.Tensor): Input data after mixup\n",
+    "    augmented_labels (torch.Tensor): Target data after mixup\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        sampling_method: int = 1,\n",
+    "        num_classes: int = 10,\n",
+    "        alpha: float = 1.0,\n",
+    "        uniform_range: list = [0.0, 1.0],\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.sampling_method = sampling_method\n",
+    "        self.num_classes = num_classes\n",
+    "        self.alpha = alpha\n",
+    "        self.uniform_range = uniform_range\n",
+    "\n",
+    "    def __call__(self, images, labels):\n",
+    "        # Set random seeds for reproducibility\n",
+    "        np.random.seed(32)\n",
+    "        torch.manual_seed(42)\n",
+    "\n",
+    "        # Perform mixup for each image and label pair\n",
+    "        shuffled_indices = torch.randperm(len(labels))\n",
+    "        one_hot_labels = F.one_hot(labels, num_classes=self.num_classes).float()\n",
+    "        augmented_images = []\n",
+    "        augmented_labels = []\n",
+    "        used_indices = set()\n",
+    "\n",
+    "        for img, label, idx in zip(images, one_hot_labels, shuffled_indices):\n",
+    "            # Sample lambda for mixup\n",
+    "            if self.sampling_method == 1:\n",
+    "                mixup_lambda = np.random.beta(self.alpha, self.alpha)\n",
+    "            elif self.sampling_method == 2:\n",
+    "                mixup_lambda = np.random.uniform(\n",
+    "                    self.uniform_range[0], self.uniform_range[1]\n",
+    "                )\n",
+    "\n",
+    "            # Get a unique index for the second image\n",
+    "            second_idx = idx\n",
+    "            while second_idx in used_indices:\n",
+    "                second_idx = torch.randperm(len(labels))[0]\n",
+    "\n",
+    "            augmented_img = (\n",
+    "                mixup_lambda * img + (1 - mixup_lambda) * images[second_idx, :]\n",
+    "            )\n",
+    "            augmented_label = (\n",
+    "                mixup_lambda * label + (1 - mixup_lambda) * one_hot_labels[second_idx]\n",
+    "            )\n",
+    "\n",
+    "            augmented_images.append(augmented_img)\n",
+    "            augmented_labels.append(augmented_label)\n",
+    "            used_indices.add(second_idx)\n",
+    "\n",
+    "        augmented_images = torch.stack(augmented_images)\n",
+    "        augmented_labels = torch.stack(augmented_labels)\n",
+    "\n",
+    "        return augmented_images, augmented_labels\n",
+    "\n",
+    "    # ... (the rest of the code remains the same) ...\n",
+    "\n",
+    "    def save_output(\n",
+    "        self, images, labels, augmented_images, augmented_labels, save_path=\"mixup.png\"\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Save the original and augmented images and labels as an image file.\n",
+    "\n",
+    "        Parameters:\n",
+    "        images (torch.Tensor): Original input images\n",
+    "        labels (torch.Tensor): Original input labels\n",
+    "        augmented_images (torch.Tensor): Augmented input images\n",
+    "        augmented_labels (torch.Tensor): Augmented input labels\n",
+    "        save_path (str): Path to save the visualization image\n",
+    "        \"\"\"\n",
+    "        # Get the predicted class labels\n",
+    "        _, predicted_labels = torch.max(augmented_labels, dim=1)\n",
+    "        predicted_labels = predicted_labels.numpy()\n",
+    "\n",
+    "        # Create a grid of original and augmented images\n",
+    "        grid_images = torch.cat([images, augmented_images], dim=0)\n",
+    "        grid_labels = np.concatenate([labels.numpy(), predicted_labels], axis=0)\n",
+    "\n",
+    "        # Normalize the images to [0, 1] range\n",
+    "        grid_images = (grid_images * 2.0) - 1.0\n",
+    "\n",
+    "        # Save the grid as an image file\n",
+    "        grid_tensor = vutils.make_grid(\n",
+    "            grid_images,\n",
+    "            nrow=images.shape[0],\n",
+    "            padding=2,\n",
+    "            normalize=True,\n",
+    "            value_range=(-1, 1),\n",
+    "        )\n",
+    "        vutils.save_image(grid_tensor, save_path)\n",
+    "\n",
+    "        # Save the labels to a text file\n",
+    "        label_file = save_path.rsplit(\".\", 1)[0] + \"_labels.txt\"\n",
+    "        with open(label_file, \"w\") as f:\n",
+    "            for label in grid_labels:\n",
+    "                f.write(str(label) + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# Create an instance of MixUp\n",
+    "mixup = MixUp(sampling_method=1, num_classes=10, alpha=1.0, uniform_range=[0.0, 1.0])\n",
+    "\n",
+    "# Get the first 16 images and labels from the training set\n",
+    "images, labels = next(iter(trainloader))\n",
+    "images = images[:10]\n",
+    "labels = labels[:10]\n",
+    "\n",
+    "# Apply mixup augmentation\n",
+    "augmented_images, augmented_labels = mixup(images, labels)\n",
+    "\n",
+    "# Save the output\n",
+    "mixup.save_output(\n",
+    "    images, labels, augmented_images, augmented_labels, save_path=\"mixup.png\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Randomly picked images\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import torchvision.utils as vutils\n",
+    "import random\n",
+    "\n",
+    "# Define the transformation for CIFAR-10 dataset\n",
+    "transform = ToTensor()\n",
+    "\n",
+    "# CIFAR-10 training dataset and DataLoader\n",
+    "trainset = CIFAR10(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "\n",
+    "class MixUp(torch.nn.Module):\n",
+    "    \"\"\"\n",
+    "    Mixup augmentation for training data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    sampling_method (int): Sampling method for mixup. 1: beta distribution, 2: uniform distribution\n",
+    "    num_classes (int): Number of classes in the dataset\n",
+    "    alpha (float): Alpha parameter for beta distribution\n",
+    "    uniform_range (list): Range for uniform distribution\n",
+    "\n",
+    "    Returns:\n",
+    "    augmented_images (torch.Tensor): Input data after mixup\n",
+    "    augmented_labels (torch.Tensor): Target data after mixup\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        sampling_method: int = 1,\n",
+    "        num_classes: int = 10,\n",
+    "        alpha: float = 1.0,\n",
+    "        uniform_range: list = [0.0, 1.0],\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.sampling_method = sampling_method\n",
+    "        self.num_classes = num_classes\n",
+    "        self.alpha = alpha\n",
+    "        self.uniform_range = uniform_range\n",
+    "\n",
+    "    def __call__(self, images, labels, num_ims=16):\n",
+    "        # Set random seeds for reproducibility\n",
+    "        np.random.seed(32)\n",
+    "        torch.manual_seed(42)\n",
+    "\n",
+    "        # Randomly select unique images from the dataset\n",
+    "        all_indices = list(range(len(trainset)))\n",
+    "        random.shuffle(all_indices)\n",
+    "        selected_indices = all_indices[:num_ims]\n",
+    "\n",
+    "        # Perform mixup for the selected images\n",
+    "        augmented_images = []\n",
+    "        augmented_labels = []\n",
+    "\n",
+    "        for idx in selected_indices:\n",
+    "            img, label = trainset[idx]\n",
+    "            img = img.unsqueeze(0)  # Add batch dimension\n",
+    "            label = torch.tensor([label])\n",
+    "\n",
+    "            # Sample lambda for mixup\n",
+    "            if self.sampling_method == 1:\n",
+    "                mixup_lambda = np.random.beta(self.alpha, self.alpha)\n",
+    "            elif self.sampling_method == 2:\n",
+    "                mixup_lambda = np.random.uniform(\n",
+    "                    self.uniform_range[0], self.uniform_range[1]\n",
+    "                )\n",
+    "\n",
+    "            # Get a unique index for the second image\n",
+    "            second_idx = random.choice(all_indices)\n",
+    "            while second_idx in selected_indices:\n",
+    "                second_idx = random.choice(all_indices)\n",
+    "\n",
+    "            second_img, second_label = trainset[second_idx]\n",
+    "            second_img = second_img.unsqueeze(0)\n",
+    "            second_label = torch.tensor([second_label])\n",
+    "\n",
+    "            augmented_img = mixup_lambda * img + (1 - mixup_lambda) * second_img\n",
+    "            augmented_label = (\n",
+    "                mixup_lambda * F.one_hot(label, num_classes=self.num_classes).float()\n",
+    "                + (1 - mixup_lambda)\n",
+    "                * F.one_hot(second_label, num_classes=self.num_classes).float()\n",
+    "            )\n",
+    "\n",
+    "            augmented_images.append(augmented_img)\n",
+    "            augmented_labels.append(augmented_label)\n",
+    "\n",
+    "        augmented_images = torch.cat(augmented_images, dim=0)\n",
+    "        augmented_labels = torch.cat(augmented_labels, dim=0)\n",
+    "\n",
+    "        return augmented_images, augmented_labels\n",
+    "\n",
+    "    def save_output(self, augmented_images, augmented_labels, save_path=\"mixup.png\"):\n",
+    "        \"\"\"\n",
+    "        Save the augmented images and labels as an image file.\n",
+    "\n",
+    "        Parameters:\n",
+    "        augmented_images (torch.Tensor): Augmented input images\n",
+    "        augmented_labels (torch.Tensor): Augmented input labels\n",
+    "        save_path (str): Path to save the visualization image\n",
+    "        \"\"\"\n",
+    "        # Normalize the images to [-1, 1] range\n",
+    "        augmented_images = (augmented_images * 2.0) - 1.0\n",
+    "\n",
+    "        # Save the grid as an image file\n",
+    "        grid_tensor = vutils.make_grid(\n",
+    "            augmented_images, nrow=4, padding=2, normalize=True, value_range=(-1, 1)\n",
+    "        )\n",
+    "        vutils.save_image(grid_tensor, save_path)\n",
+    "\n",
+    "        # Save the labels to a text file\n",
+    "        label_file = save_path.rsplit(\".\", 1)[0] + \"_labels.txt\"\n",
+    "        with open(label_file, \"w\") as f:\n",
+    "            for label in augmented_labels:\n",
+    "                f.write(str(torch.argmax(label).item()) + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# Create an instance of MixUp\n",
+    "mixup = MixUp(sampling_method=1, num_classes=10, alpha=1.0, uniform_range=[0.0, 1.0])\n",
+    "\n",
+    "# Apply mixup augmentation\n",
+    "augmented_images, augmented_labels = mixup(None, None, num_ims=16)\n",
+    "\n",
+    "# Save the output\n",
+    "mixup.save_output(augmented_images, augmented_labels, save_path=\"mixup.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  saving original images too\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import torchvision.utils as vutils\n",
+    "import random\n",
+    "\n",
+    "# Define the transformation for CIFAR-10 dataset\n",
+    "transform = ToTensor()\n",
+    "\n",
+    "# CIFAR-10 training dataset and DataLoader\n",
+    "trainset = CIFAR10(root=\"./data\", train=True, download=True, transform=transform)\n",
+    "trainloader = torch.utils.data.DataLoader(trainset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "\n",
+    "class MixUp(torch.nn.Module):\n",
+    "    \"\"\"\n",
+    "    Mixup augmentation for training data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    sampling_method (int): Sampling method for mixup. 1: beta distribution, 2: uniform distribution\n",
+    "    num_classes (int): Number of classes in the dataset\n",
+    "    alpha (float): Alpha parameter for beta distribution\n",
+    "    uniform_range (list): Range for uniform distribution\n",
+    "\n",
+    "    Returns:\n",
+    "    augmented_images (torch.Tensor): Input data after mixup\n",
+    "    augmented_labels (torch.Tensor): Target data after mixup\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        sampling_method: int = 1,\n",
+    "        num_classes: int = 10,\n",
+    "        alpha: float = 1.0,\n",
+    "        uniform_range: list = [0.0, 1.0],\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.sampling_method = sampling_method\n",
+    "        self.num_classes = num_classes\n",
+    "        self.alpha = alpha\n",
+    "        self.uniform_range = uniform_range\n",
+    "\n",
+    "    def __call__(self, num_ims=16):\n",
+    "        # Set random seeds for reproducibility\n",
+    "        np.random.seed(32)\n",
+    "        torch.manual_seed(42)\n",
+    "\n",
+    "        # Randomly select unique images from the dataset\n",
+    "        all_indices = list(range(len(trainset)))\n",
+    "        random.shuffle(all_indices)\n",
+    "        selected_indices = all_indices[:num_ims]\n",
+    "\n",
+    "        # Perform mixup for the selected images\n",
+    "        augmented_images = []\n",
+    "        augmented_labels = []\n",
+    "        original_images = []\n",
+    "\n",
+    "        for idx in selected_indices:\n",
+    "            img, label = trainset[idx]\n",
+    "            img = img.unsqueeze(0)  # Add batch dimension\n",
+    "            label = torch.tensor([label])\n",
+    "            original_images.append(img)  # Store the original image\n",
+    "\n",
+    "            # Sample lambda for mixup\n",
+    "            if self.sampling_method == 1:\n",
+    "                mixup_lambda = np.random.beta(self.alpha, self.alpha)\n",
+    "            elif self.sampling_method == 2:\n",
+    "                mixup_lambda = np.random.uniform(\n",
+    "                    self.uniform_range[0], self.uniform_range[1]\n",
+    "                )\n",
+    "\n",
+    "            # Get a unique index for the second image\n",
+    "            second_idx = random.choice(all_indices)\n",
+    "            while second_idx in selected_indices:\n",
+    "                second_idx = random.choice(all_indices)\n",
+    "\n",
+    "            second_img, second_label = trainset[second_idx]\n",
+    "            second_img = second_img.unsqueeze(0)\n",
+    "            second_label = torch.tensor([second_label])\n",
+    "\n",
+    "            augmented_img = mixup_lambda * img + (1 - mixup_lambda) * second_img\n",
+    "            augmented_label = (\n",
+    "                mixup_lambda * F.one_hot(label, num_classes=self.num_classes).float()\n",
+    "                + (1 - mixup_lambda)\n",
+    "                * F.one_hot(second_label, num_classes=self.num_classes).float()\n",
+    "            )\n",
+    "\n",
+    "            augmented_images.append(augmented_img)\n",
+    "            augmented_labels.append(augmented_label)\n",
+    "\n",
+    "        augmented_images = torch.cat(augmented_images, dim=0)\n",
+    "        augmented_labels = torch.cat(augmented_labels, dim=0)\n",
+    "        original_images = torch.cat(original_images, dim=0)\n",
+    "\n",
+    "        return original_images, augmented_images, augmented_labels\n",
+    "\n",
+    "    def save_output(\n",
+    "        self, original_images, augmented_images, augmented_labels, save_path=\"mixup.png\"\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        Save the original, augmented images and labels as image files.\n",
+    "\n",
+    "        Parameters:\n",
+    "        original_images (torch.Tensor): Original input images\n",
+    "        augmented_images (torch.Tensor): Augmented input images\n",
+    "        augmented_labels (torch.Tensor): Augmented input labels\n",
+    "        save_path (str): Path to save the visualization image\n",
+    "        \"\"\"\n",
+    "        # Normalize the images to [-1, 1] range\n",
+    "        original_images = (original_images * 2.0) - 1.0\n",
+    "        augmented_images = (augmented_images * 2.0) - 1.0\n",
+    "\n",
+    "        # Save the original images\n",
+    "        original_grid = vutils.make_grid(\n",
+    "            original_images, nrow=4, padding=2, normalize=True, value_range=(-1, 1)\n",
+    "        )\n",
+    "        vutils.save_image(original_grid, \"original_mixup.png\")\n",
+    "\n",
+    "        # Save the augmented images\n",
+    "        augmented_grid = vutils.make_grid(\n",
+    "            augmented_images, nrow=4, padding=2, normalize=True, value_range=(-1, 1)\n",
+    "        )\n",
+    "        vutils.save_image(augmented_grid, save_path)\n",
+    "\n",
+    "        # Save the labels to a text file\n",
+    "        label_file = save_path.rsplit(\".\", 1)[0] + \"_labels.txt\"\n",
+    "        with open(label_file, \"w\") as f:\n",
+    "            for label in augmented_labels:\n",
+    "                f.write(str(torch.argmax(label).item()) + \"\\n\")\n",
+    "\n",
+    "\n",
+    "# Create an instance of MixUp\n",
+    "mixup = MixUp(sampling_method=1, num_classes=10, alpha=1.0, uniform_range=[0.0, 1.0])\n",
+    "\n",
+    "# Apply mixup augmentation\n",
+    "original_images, augmented_images, augmented_labels = mixup(num_ims=16)\n",
+    "\n",
+    "# Save the output\n",
+    "mixup.save_output(\n",
+    "    original_images, augmented_images, augmented_labels, save_path=\"mixup.png\"\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
