--- a/task2/task2.ipynb
+++ b/task2/task2.ipynb
@@ -712,17 +712,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
-    "import torch.optim.lr_scheduler as lr_scheduler\n",
-    "import torch.nn.utils.prune as prune\n",
-    "from torchvision.transforms import Resize\n",
-    "from models import ViT\n",
-    "from data import MixUp\n",
+    "# import os\n",
+    "# import torch\n",
+    "# import torch.nn as nn\n",
+    "# import torch.optim as optim\n",
+    "# import torchvision\n",
+    "# import torchvision.transforms as transforms\n",
+    "# import torch.optim.lr_scheduler as lr_scheduler\n",
+    "# import torch.nn.utils.prune as prune\n",
+    "# from torchvision.transforms import Resize\n",
+    "# from models import ViT\n",
+    "# from data import MixUp\n",
     "\n",
     "PRUNING_AMOUNT = 0.1\n",
     "\n",
